<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:paddingBottom="20dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2e7bc1"
        android:id="@+id/healthquizQuestions"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="HEALTH QUIZ"
            android:textSize="90dp"
            android:id="@+id/healthquiztitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp" />
        //QUESTION 1
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:id="@+id/q1"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:gravity="center" />
            //Q1 CHECK ANSWER
            <Button
                android:id="@+id/openhealthpopup1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/q1button"
                android:layout_marginTop="17dp"
                android:background="#ffffff"
                android:textColor="#2e7bc1"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />

        //QUESTION 2
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2"
                    android:id="@+id/q2"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp"
                    android:gravity="center" />
            //Q2 CHECK ANSWER
            <Button
                android:id="@+id/openhealthpopup2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/q2button"
                android:layout_marginTop="17dp"
                android:background="#ffffff"
                android:textColor="#2e7bc1"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        //QUESTION 3
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3"
                    android:id="@+id/q3"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp"
                    android:gravity="center" />
            //Q3 CHECK ANSWER
            <Button
                android:id="@+id/openhealthpopup3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/q3button"
                android:layout_marginTop="17dp"
                android:background="#ffffff"
                android:textColor="#2e7bc1"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        //QUESTION 4

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4"
                    android:id="@+id/q4"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp"
                    android:gravity="center" />
            //Q4 CHECK ANSWER
            <Button
                android:id="@+id/openhealthpopup4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/q4button"
                android:layout_marginTop="17dp"
                android:background="#ffffff"
                android:textColor="#2e7bc1"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        //QUESTION 5
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5"
                    android:id="@+id/q5"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffffff"
                    android:layout_marginTop="20dp"
                    android:textSize="25dp"
                    android:gravity="center" />
            //Q5 CHECK ANSWER
            <Button
                android:id="@+id/openhealthpopup5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/q5button"
                android:layout_marginTop="17dp"
                android:background="#ffffff"
                android:textColor="#2e7bc1"
                android:padding="3dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>